# evalautoapp

./: README.md  app.py  config.example.yaml  documentation.py  errors.json  eval.py  homepage.py  metrics.json  processor.py  pyproject.toml  requirements.txt  streamlit_app.py  test_eval.py
.streamlit/: config.toml
app/: documentation.py  eval.py  parallelize.py  processor.py  test_eval.py
data/: example_fake_data_output.csv  fake_data.csv  mcq_neg_10.csv  saq_10.csv
navbar/: documentation.py  processor.py
pages/: documentation.py  processor.py
test/: test_eval.py
test/data/: fake_data.csv  mcq_10.csv  saq_neg_10.csv
