[tool.poetry]
name = "evalautoapp"
version = "0.1.0"
description = ""
authors = ["hannah.kuo <hannah.kuo@servicenow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
openai = "^1.35.13"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
